--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Genesis-Tech</title>
+  <meta name="description" content="Genesis-Tech offers expert solar and electrical installations in Zimbabwe at affordable prices. Contact us today!">
+  <meta name="keywords" content="solar, electrical, Zimbabwe, Genesis-Tech, solar installations, electrical wiring, affordable solar, Zimbabwe solar companies">
+  <meta name="author" content="The Genesis-Tech">
+  <meta property="og:title" content="Genesis-Tech | Electrical & Solar Services in Zimbabwe">
+  <meta property="og:description" content="Top-quality electrical and solar services — without the top-shelf price tag.">
+  <meta property="og:url" content="https://blatcci.github.io/Genesis-Tech/">
+  <meta property="og:type" content="website">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     body {
